# Mindwtr

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_zh.md  SECURITY.md  package.json  playwright.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  🐛-bug-report.md  💥-internal-app-error.md  📱-mobile-ui-issue.md  🔄-sync-data-issue.md  🚀-feature-request.md
.github/workflows/: bump-homebrew-cask.yml  ci.yml  debug-notary.yml  dependency-audit.yml  docker-image-app.yml  docker-image-cloud.yml  docker-image-reusable.yml  msstore-update-metadata.yml  publish-repo.yml  release-android-foss.yml  release-android.yml  release-ios-appstore.yml  release-linux.yml  release-macos-appstore.yml  release-macos.yml  release-windows.yml  release.yml  snap.yml  wiki-sync.yml  windows-store.yml
apps/cloud/: README.md  package.json
apps/desktop/: .eslintrc.cjs  README.md  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.mas.plist  Info.appstore.plist  Info.plist  build.rs  tauri.appstore.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/linux/: Mindwtr.metainfo.xml
apps/desktop/src-tauri/src/: lib.rs  macos_eventkit_bridge.m
apps/mcp-server/: README.md  package.json
apps/mobile/: ExportOptions.plist  PRIVACY.md  README.md  app.config.ts  app.json  eas.json  index.js  metro.config.js  package-lock.json  package.json  polyfills.js  vitest.config.ts  vitest.setup.ts  widget-task-handler.tsx
aur/: PKGBUILD
deb/: InRelease  Packages  Release  Release.gpg
docker/: README.md  compose.yaml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY.md  api.md  cloud-sync.md  development.md  izzyonandroid.yml  pwa.md  roadmap.md
docs/adr/: 0001-sqlite-constraints.md  README.md
docs/release-notes/: 0.4.5.md  0.4.9.md  0.5.2.md  0.6.10.md  0.6.11.md  0.6.12.md  0.6.13.md  0.6.14.md  0.6.15.md  0.6.16.md  0.6.17.md  0.6.18.md  0.6.19.md  0.6.20.md  0.6.21.md  0.6.22.md  0.6.4.md  0.7.0.md  0.7.1.md  README.md
e2e/: app.spec.ts
metadata/: copyright.txt  metadata.json
metadata/chocolatey/: mindwtr.nuspec
metadata/en-US/: full_description.txt  keywords.txt  release_notes.txt  short_description.txt  subtitle.txt
metadata/es-ES/: full_description.txt  release_notes.txt  short_description.txt  subtitle.txt  support_url.txt  title.txt
metadata/zh-CN/: full_description.txt  release_notes.txt  short_description.txt  subtitle.txt
rpm/repodata/: 69932ad060d534984ff1267aeb2bce23ec234dbae2fcf80a83ed4a735c530abf-primary.sqlite.bz2  b7e61a932675a324f235cbff340a94f5af35e6f1ab6df6fe7a3e3fb203d2825f-filelists.sqlite.bz2  e377e8cc2bde27464277b65aa60ab47bed44f186e47145c81d9fa9d3f5488a72-other.sqlite.bz2  repomd.xml
scripts/: mindwtr-cli.ts  push-all.sh  update-versions.js
scripts/ci/: asc-api-utils.sh  decode-base64-to-file.sh  (+5 more)
snap/: snapcraft.yaml
wiki/: AI-Assistant.md  Architecture.md  Calendar-Integration.md  Cloud-Deployment.md  Cloud-Sync.md  Core-API.md  Data-and-Sync.md  Deployment-Guide.md  Desktop-Installation.md  Desktop-Keyboard-Shortcuts.md  Developer-Guide.md  Diagnostics-and-Logs.md  Docker-Deployment.md  Dropbox-Sync.md  FAQ.md  GTD-Workflow-in-Mindwtr.md  Getting-Started.md  Home.md  MCP-Server.md  Mobile-Installation.md  Performance-Guide.md  Sync-Algorithm.md  Testing-Strategy.md  User-Guide-Desktop.md  User-Guide-Mobile.md  _Footer.md  _Sidebar.md
(+312 files in other folders)
