[package]
name = "mindwtr"
version = "0.2.8"
description = "A complete Getting Things Done (GTD) productivity system - Mind Like Water"
authors = ["DongDong"]
license = "AGPL-3.0-only"
repository = "https://github.com/dongdongbh/Mindwtr"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
hound = "3.5"
whisper-rs = "0.15.1"
cpal = "0.15"
open = "5.3"

[features]
default = []
diagnostics = ["tauri/devtools"]
